syntax = "proto3";

package pb;

import "google/api/annotations.proto";
import "rpc_create_account.proto";
import "rpc_login_account.proto";

option go_package = "simpletodo/pb";


service Simpletodo {
    rpc CreateAccount (CreateAccountRequest) returns (CreateAccountResult) {
        option (google.api.http) = {
            post: "/v1/create_account"
            body: "*"
        };
    }
    rpc LoginAccount (LoginAccountRequest) returns (LoginAccountResult) {
        option (google.api.http) = {
            post: "/v1/login_account"
            body: "*"
        };
    }
}
